--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "sirv docs"
   },
   "devDependencies": {
+    "@beyonk/svelte-notifications": "^2.0.3",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "chance": "^1.1.6",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -16,7 +18,6 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0",
-    "chance": "^1.1.6"
+    "sirv-cli": "^1.0.0"
   }
 }
